--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.30",
+    "@supabase/ssr": "^0.4.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "ai": "^3.3.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-animated-counter": "^1.7.9",
     "react-dom": "^18"
   },
   "devDependencies": {
